# operator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
env/: pyvenv.cfg
src/operator_ai/: __init__.py  agent.py  cli.py  commands.py  config.py  job_specs.py  jobs.py  log_context.py  main.py  memory.py  skills.py  status.py  store.py  truncation.py
src/operator_ai/bundled_skills/skill-creator/: SKILL.md
src/operator_ai/bundled_skills/skill-creator/references/: frontmatter-reference.md
src/operator_ai/prompts/: __init__.py  cleaner.md  harvester.md  system.md
src/operator_ai/tools/: __init__.py  files.py  jobs.py  kv.py  memory.py  messaging.py  registry.py  shell.py  skills.py  subagent.py  web.py  workspace.py
src/operator_ai/transport/: base.py  slack.py
tests/: conftest.py  test_config.py  test_job_specs.py  test_memory.py  test_memory_harvester.py  test_memory_privacy.py
